Refactor subject hierarchy interface and implement schema rest service.
